<resources>
    <string name="app_name">RioTour</string>
    <string name="title_activity_detalhe">Detalhes</string>
    <string name="error_reading_file">Ocorreu um erro ao ler o arquivo</string>
    <string name="history">Histórico</string>
    <string name="author">Autor</string>
    <string name="inaguration">Inauguração</string>
    <string name="localization">Localização</string>
    <string name="neighborhood">Bairro</string>
    <string name="address">Endereço</string>
    <string name="email">email</string>
    <string name="phone">Telefone</string>
    <string name="category">Categoria</string>
    <string name="gps_settings">Configuração do GPS</string>
    <string name="gps_msg">O GPS não está ativo. Você gostaria de ir as configurações e ativa-lo?</string>
    <string name="cancel">Cancelar</string>
    <string name="settings">Configurações</string>
    <string name="title_activity_pesquisa">Pesquisar</string>
    <string name="pesquisa_title">Pesquisar lugares</string>
    <string name="campo_endereco">Endereço:</string>
    <string name="campo_fax">Fax:</string>
    <string name="campo_email">E-mail:</string>
    <string name="campo_categoria">Categoria:</string>
    <string name="campo_qtd_acomodacoes_cadeirantes">Qtd. acomodações cadeirantes:</string>
    <string name="campo_qtd_acomodacoes_cao_guia">Qtd. acomodações cão guia:</string>
    <string name="campo_telefone_para_surdos">Telefone para surdos:</string>
    <string name="campo_telefone">Telefone:</string>
    <string name="campo_cnpj">CNPJ:</string>
    <string name="campo_idiomas_falados">Idiomas falados:</string>
    <string name="campo_historico">Histórico:</string>
    <string name="campo_autor">Autor:</string>
    <string name="campo_inauguracao">Inauguração:</string>
    <string name="campo_localizacao">Localização:</string>
    <string name="title_activity_pesquisas_recentes">Pesquisas Recentes</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="limpar">Limpar</string>
    <string name="menu_home">Home</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_pesquisas_recentes">Pesquisas Recentes</string>
    <string name="menu_sobre">Sobre</string>
    <string name="tipo_lugar_ponto_turistico">Ponto Turístico</string>
    <string name="tipo_lugar_hotel">Hotel</string>
    <string name="tipo_lugar_monumento">Monumento</string>
    <string name="tipo_lugar_museu">Museu</string>
    <string name="tipo_lugar_praia">Praia</string>

    <string name="detail_banner_ad_unit_id">ca-app-pub-6396238557544035/1481303106</string>
</resources>
